--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "libSQL adapter for Lucia",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test.local": "tsx test/local/index.ts"
   },
   "keywords": [
     "lucia",
@@ -15,7 +16,10 @@
   "author": "abdel-17",
   "license": "ISC",
   "devDependencies": {
+    "@libsql/client": "^0.1.6",
     "@lucia-auth/adapter-test": "^3.0.1",
-    "lucia-auth": "^1.7.1"
+    "dotenv": "^16.1.3",
+    "lucia-auth": "^1.7.1",
+    "tsx": "^3.12.7"
   }
 }
