--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "lucia-libsql-adapter",
+  "name": "lucia-adapter-libsql",
   "version": "0.1.0",
   "description": "libSQL adapter for Lucia",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "module": "index.js",
+  "exports": {
+    ".": "./index.js"
+  },
   "scripts": {
+    "build": "rm -rf ./dist/* && tsc && cp ./package.json ./dist && cp .npmignore dist",
     "test.local": "tsx test/local/index.ts",
     "test.turso": "tsx test/turso/index.ts"
   },
@@ -19,8 +25,13 @@
   "devDependencies": {
     "@libsql/client": "^0.1.6",
     "@lucia-auth/adapter-test": "^3.0.1",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.2.5",
     "dotenv": "^16.1.3",
-    "lucia-auth": "^1.7.1",
-    "tsx": "^3.12.7"
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "lucia-auth": "^1.7.1"
   }
 }
