--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "dotenv": "^16.1.3",
+    "lucia-auth": "^1.7.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "lucia-auth": "^1.7.1"
   }
 }
