--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "description": "libSQL adapter for Lucia",
   "type": "module",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "module": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "exports": {
-    ".": "./index.js"
+    ".": "./dist/index.js"
   },
   "scripts": {
     "build": "rm -rf ./dist/* && tsc",
