--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "libsql",
     "turso"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/abdel-17/lucia-libsql-adapter"
+  },
   "author": "abdel-17",
   "license": "ISC",
   "devDependencies": {
