--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lucia-libsql-adapter",
-  "version": "0.1.3",
+  "version": "0.2.0-beta.1",
   "description": "libSQL adapter for Lucia",
   "type": "module",
   "main": "dist/index.js",
@@ -11,12 +11,13 @@
   },
   "scripts": {
     "build": "rm -rf ./dist/* && tsc",
-    "test.local": "tsx test/local/index.ts",
-    "test.turso": "tsx test/turso/index.ts"
+    "test": "tsx test/index.ts"
   },
   "keywords": [
     "lucia",
     "adapter",
+    "authentication",
+    "sql",
     "libsql",
     "turso"
   ],
@@ -26,13 +27,16 @@
   },
   "author": "abdel-17",
   "license": "ISC",
+  "peerDependencies": {
+    "@libsql/client": "^0.2.1",
+    "lucia": "^2.0.0-beta.1"
+  },
   "devDependencies": {
-    "@libsql/client": "^0.1.6",
-    "@lucia-auth/adapter-test": "^3.0.1",
+    "@libsql/client": "^0.2.1",
+    "@lucia-auth/adapter-test": "4.0.0-beta.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5",
-    "dotenv": "^16.1.3",
-    "lucia-auth": "^1.7.1",
+    "@types/node": "^20.3.1",
+    "lucia": "2.0.0-beta.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   }
