--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lucia-libsql-adapter",
-  "version": "0.2.0-beta",
+  "version": "0.1.4-beta.1",
   "description": "libSQL adapter for Lucia",
   "type": "module",
   "main": "dist/index.js",
